# rust_jx3_server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.docker/: Dockerfile  deploy.sh
.sqlx/: query-7b2d3d210f44a99456a785dec44f5f1419898231f27717cd647a336ea094b8d2.json  query-9a3f1a816b02ba6d0b9aa43dafddafe5ecc6f19d6ca93338a188c7dedd1ebfa5.json  query-b2317fc597330cce939f9f702bd2ee119340215dc9ad30a723059403347dea45.json
src/: config.rs  db.rs  main.rs
src/core/: client.rs  error.rs
src/handler/: calendar.rs  mod.rs  server_list.rs
src/models/: api_test.rs  calendar.rs  mod.rs  response.rs  server.rs
src/routes/: api_tests.rs  calendar.rs  calendar_routes.rs  mod.rs  server_list.rs  server_routes.rs
src/services/: calendar.rs  calendar_services.rs  mod.rs  server_list.rs
