[package]
name = "rust_jx3_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
config = { version = "0.15.19", features = ["yaml"] }
dotenvy = "0.15.7"
envy = "0.4.2"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "mysql",
    "runtime-tokio",
    "macros",
    "chrono",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
